bug fix for align hamburger menu items

--- a/chrome/components/ogx_autohide_bookmark-bar.css
+++ b/chrome/components/ogx_autohide_bookmark-bar.css
@@ -7,13 +7,13 @@
 :root{
     --uc-vertical-toolbar-width: 48px !important;                                                               /* Nuevo tamaño sidebar */
     --padding-left-tab: calc(var(--uc-vertical-toolbar-width) - 1px) !important;                                /* Nuevo tamaño botón "Menú" */
-    --margin-left-icons-personal: 15px !important;                                                              /* Nuevo margen left de íconos del menú */
+    --margin-left-icons-personal: 8px !important;                                                              /* Nuevo margen left de íconos del menú */
 }
 
 /* Centrar menu-logo */
 
 :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button .toolbarbutton-badge-stack {
-    padding-left: calc(var(--margin-left-icons-personal) - 4px) !important;
+    padding-left: calc(var(--margin-left-icons-personal) + 2px) !important;
 }
 
 /* color botón Menú para hacer coincidir con la barra de pestañas de <tab-center-reborn> en temas claros */
